add sample_type and sample_number of bottles to request form for patient rules

--- a/app/views/renalware/pathology/forms/create.html.slim
+++ b/app/views/renalware/pathology/forms/create.html.slim
@@ -65,7 +65,13 @@ hr.page_break
                 p
                   | ======== #{lab_name} ========
                 - patient_rules.each do |patient_rule|
-                  p = patient_rule.test_description
+                  p
+                    | #{patient_rule.test_description}
+                    |  (#{patient_rule.sample_type}, #{patient_rule.sample_number_bottles}
+                    - if patient_rule.sample_number_bottles > 1
+                      |  bottles)
+                    - else
+                      |  bottle)
             - else
               p No tests required.
 
