--- a/app/views/renalware/pathology/patient_rules/edit.html.slim
+++ b/app/views/renalware/pathology/patient_rules/edit.html.slim
@@ -1,10 +1,11 @@
-- opts = { title: "New Patient Rules", navigation_partial: "renalware/pathology/navigation" }
+- opts = { title: "Edit Patient Rule", navigation_partial: "renalware/pathology/navigation" }
 = render layout: "renalware/patients/layout", locals: opts do
   = render partial: "renalware/shared/errors", locals: { model: patient_rule }
 
   .row
     .large-8.columns
       = simple_form_for patient_rule,
-          url: patient_pathology_patient_rules_path(patient_id: @patient.id),
-          wrapper: "horizontal_form" do |f|
+          url: patient_pathology_patient_rule_path(patient_id: @patient.id, id: patient_rule.id),
+          wrapper: "horizontal_form",
+          method: :put do |f|
         = render partial: "form", locals: { patient_rule: patient_rule, frequencies: frequencies, labs: labs, f: f }
