Update path to be consistent with others

--- a/app/views/renalware/exit_site_infections/new.html.slim
+++ b/app/views/renalware/exit_site_infections/new.html.slim
@@ -7,4 +7,4 @@
 
       = submit_tag "Save", class: "button"
       span= " or "
-      = link_to "cancel", patient_pd_summary_path(@patient)
+      = link_to "cancel", patient_pd_dashboard_path(@patient)
