--- a/app/views/renalware/pd_regimes/edit.html.slim
+++ b/app/views/renalware/pd_regimes/edit.html.slim
@@ -8,4 +8,4 @@
       .large-12.columns
         = submit_tag "Update", class: "button"
         span= " or "
-        = link_to "Cancel", patient_pd_summary_path(@patient)
+        = link_to "Cancel", patient_pd_dashboard_path(@patient)
