--- a/app/views/renalware/exit_site_infections/_navigation.html.slim
+++ b/app/views/renalware/exit_site_infections/_navigation.html.slim
@@ -1,6 +1,6 @@
 - if @exit_site_infection.try(:new_record?)
-  = render "renalware/pd_summaries/navigation"
+  = render "renalware/pd_dashboards/navigation"
 - else
   dl.sub-nav
-    dd= link_to "PD Summary", patient_pd_summary_path(@patient)
+    dd= link_to "PD Summary", patient_pd_dashboard_path(@patient)
     dd= link_to "View Exit Site Infection", patient_exit_site_infection_path(@patient, @exit_site_infection)
