--- a/app/views/renalware/peritonitis_episodes/_navigation.html.slim
+++ b/app/views/renalware/peritonitis_episodes/_navigation.html.slim
@@ -1,6 +1,6 @@
 - if @peritonitis_episode.try(:new_record?)
-  = render "renalware/pd_summaries/navigation"
+  = render "renalware/pd_dashboards/navigation"
 - else
   dl.sub-nav
-    dd= link_to "PD Summary", patient_pd_summary_path(@patient)
+    dd= link_to "PD Summary", patient_pd_dashboard_path(@patient)
     dd= link_to "View Peritonitis Episode", patient_peritonitis_episode_path(@patient, @peritonitis_episode)
