--- a/app/views/renalware/peritonitis_episodes/new.html.slim
+++ b/app/views/renalware/peritonitis_episodes/new.html.slim
@@ -6,4 +6,4 @@
 
     = submit_tag "Save", class: "button"
     span= " or "
-    = link_to "cancel", patient_pd_summary_path(@patient)
+    = link_to "cancel", patient_pd_dashboard_path(@patient)
