--- a/app/views/renalware/modalities/descriptions/index.html.slim
+++ b/app/views/renalware/modalities/descriptions/index.html.slim
@@ -6,8 +6,7 @@
     thead
       tr
         th
-        th Modal Name
-        th Modal Code
+        th Name
     tbody
       - @modalilty_descriptions.each do |m|
         tr
@@ -16,4 +15,3 @@
             = pipe_separator
             = link_to "Delete", modalities_description_path(m.id), method: :delete, data: { confirm: "Are you sure you want to delete this modal?" }
           td= m.name
-          td= m.code
