--- a/app/views/renalware/medications/_navigation.html.slim
+++ b/app/views/renalware/medications/_navigation.html.slim
@@ -1,3 +1,4 @@
 dl.sub-nav
   dd= link_to "View", patient_medications_path(@patient)
+  dd= link_to "Filter", patient_medications_path(@patient, @patient, filter: 1)
   dd= link_to "Add medication", new_patient_medication_path(@patient), remote: true
